Fixed issue that campaign banner was covering the map

--- a/app/components/app/Header/Header.css
+++ b/app/components/app/Header/Header.css
@@ -116,10 +116,25 @@ header {
     background: url(campaign.jpg) no-repeat;
     background-size: cover;
     line-height: 50px;
-    font-size: 20px;
+    font-size: 1em;
     padding: 0 50px;
     text-align: center;
+    z-index: 50;
 }
 .campaign-button {
     margin-left: 50px;
+    margin-right: 10px;
+}
+.campaign-close {
+    cursor: pointer;
+    cursor: hand;
+    top: 3px;
+    font-size: 20px;
+}
+
+@media (max-width: 500px) {
+    .campaign {
+        line-height: 25px;
+        padding-bottom: 10px;
+    }
 }
